# hw-otus-c

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
HW01-rarjpeg/: Makefile  README.md
HW01-rarjpeg/src/: main.c
HW01-rarjpeg/src/zipjpeg/: zipjpeg.c  zipjpeg.h  zipjpeg_test.c
HW02-utf-encoder/: Makefile  README.md
HW02-utf-encoder/src/: main.c
HW02-utf-encoder/src/encoding/: 8859_5.h  cp1251.h  encoder.c  encoder.h  encoder_test.c  koi8-r.h
HW03-hashmap/: Makefile  README.md
HW03-hashmap/src/: main.c
HW03-hashmap/src/hashmap/: hashmap.c  hashmap.h  hashmap_test.c
HW03-hashmap/src/wcounter/: wcounter.c  wcounter.h  wcounter_test.c
HW03-hashmap/test/: text.txt
HW04-weather-api/: CMakeLists.txt  README.md
HW04-weather-api/src/: main.c  main.h
HW07-asm/: CMakeLists.txt  README.md
HW07-asm/asm/: Makefile
HW07-asm/src/: main.c
HW09-file-observer/: CMakeLists.txt  Dockerfile  Makefile  README.md  file-observer  run_container.sh
HW09-file-observer/src/: main.c  test_client.c
HW10-crc32/: CMakeLists.txt  README.md
HW10-crc32/src/: main.c
HW12-telehack-client/: CMakeLists.txt  README.md
HW12-telehack-client/src/: main.c
